Additional MWLogger -> MMLogger conversion